cluster/apps/flux-system/webhooks/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
    traefik.ingress.kubernetes.io/router.middlewares: networking-cloudflare-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: flux-receiver.${SECRET_DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - flux-receiver.${SECRET_DOMAIN}
      secretName: flux-receiver-tls
